--- a/src/docs/03_system_scope_and_context.adoc
+++ b/src/docs/03_system_scope_and_context.adoc
@@ -19,16 +19,7 @@ Various options:
 * Context diagrams
 * Lists of communication partners and their interfaces.
 ****
-* The system will be based on a decentralized architecture where data storage is separated from the app.
-* Users can store their routes in their own pods.
-* Users can view the routes stored on a map (map itself out of scope).
-* The app will allow a user to share pictures, videos or information about a route with other friends.
-* A user can get notifications when some friend shares a route with him.
-* Users can have groups of friends with whom they may want to share a route
-* It should be possible to view routes loaded by users that are using a different app, so interoperability with other route management systems should be taken into account.
-
-# External interfaces:
-* We will connect to the pods by using RDFlib.js javascript library
+The stakeholders of the application are described in the next lines and how the communicate. 
 
 === Business Context
 
@@ -48,9 +39,16 @@ Alternatively (or additionally) you can use a table.
 The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.
 ****
 
-**<Diagram or Table>**
+image::BusinessContext.png[BusiContext]
 
-**<optionally: Explanation of external domain interfaces>**
+
+User:: The user can see in the application his stored routes.
+User Friends:: Users can share their routes with other friends and make groups. They can also share videos, photos and
+information about them.
+Other Apps:: Interoperability with other apps is also provided. Routes can be loaded from other applications in multiple formats
+such as KML. 
+
+
 
 === Technical Context
 
@@ -68,8 +66,9 @@ together with a mapping table showing the relationships between channels and inp
 
 ****
 
-**<Diagram or Table>**
+image:TechnicalContext.png[TechContext]
 
-**<optionally: Explanation of technical interfaces>**
+RDFLib.js:: It's the library used to comunicate the Pods (where the information is stored).
 
-**<Mapping Input/Output to Channels>**
+The application is based on the SOLID project for the re-decentralization of the web, therefore
+each user is the owner of its own data through the mentioned Pods.
