--- a/src/docs/03_system_scope_and_context.adoc
+++ b/src/docs/03_system_scope_and_context.adoc
@@ -39,7 +39,7 @@ Alternatively (or additionally) you can use a table.
 The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.
 ****
 
-image::BusinessContext.png[BusiContext]
+image::images/BusinessContext.png[BusiContext]
 
 
 User:: The user can see in the application his stored routes.
@@ -66,7 +66,7 @@ together with a mapping table showing the relationships between channels and inp
 
 ****
 
-image:TechnicalContext.png[TechContext]
+image:images/TechnicalContext.png[TechContext]
 
 RDFLib.js:: It's the library used to comunicate the Pods (where the information is stored).
 
