--- a/src/docs/11_technical_risks.adoc
+++ b/src/docs/11_technical_risks.adoc
@@ -4,14 +4,16 @@
 
 [role="arc42help"]
 ****
-.Contents
-A list of identified technical risks or technical debts, ordered by priority
+In the developement of the project, we expect to find the following difficulties:
 
-.Motivation
-“Risk management is project management for grown-ups” (Tim Lister, Atlantic Systems Guild.) 
+[options="header",cols="1,2,4,4"]
+|===
+|Ref|Risk/Debt|Consequence| Suggested Solution
+| 1 | New technology |A considerable technical debt in regard to the tecnologies proposed, as both SOLID and React are new to us, that might incapacitate us to obtain the desired result. | Read and obtain information beforehand to obtain the necessary information.
+| 2 | Working as a team |A possible lack of coordination, due to our inexperience as a working group and differences as individuals.| Make use of tools like github issues and pull requests to improve as a team.
+| 3 | Lack of time |Time management migth also be hard as we can not be 100% devoted to the project.| Organize our schedules and plan the work to be done in the minutes.
+| 4 | Software conflicts |Incompatibilities in libraries and software used is also a risk that should be considered.| Check issues in the sofware before using it to prevent conflicts with what is already implemented.
+| 5 | SOLID little maturity | Added to our technical debt, we have to take into account that SOLID is a new technology, so support and documentation of it might be scarce.|Share all the information found with our colleagues to share knowledge.
+|===
 
-This should be your motto for systematic detection and evaluation of risks and technical debts in the architecture, which will be needed by management stakeholders (e.g. project managers, product owners) as part of the overall risk analysis and measurement planning.
-
-.Form
-List of risks and/or technical debts, probably including suggested measures to minimize, mitigate or avoid risks or reduce technical debts.
 ****
