Wrote some documentation: 04_solution_strategy
Started to write some init text for this section of the documentation

--- a/src/docs/04_solution_strategy.adoc
+++ b/src/docs/04_solution_strategy.adoc
@@ -1,6 +1,22 @@
 [[section-solution-strategy]]
 == Solution Strategy
 
+# Contents
+
+.Summary
+
+For the duration of the semester, we plan to accomplish a functional application that allows users to have/manage routes in a down-to-earth way. In addition, we shall follow some criteria and requirements pre-established by our teachers and professors. Complying with the approach of a social network where users can share data and interact with each other.
+
+This objective is fulfilled by means of several weekly meetings during our lab practice session at the unversity. On top of that, we might meet once in a while to finish pending work or to discuss the way to proceed on some matter of the project in general.
+
+It should be noted that many of the decissions have been given solved as a constraint or requirement right before starting the project. So, many of the mentioned below are just explanations and not actual team made decissions.
+
+.Decissions
+
+* Programming language: JavaScript has been the one of choice.
+* Architectural model: MVC --> Model - View - Controller.
+* Information storage: SOLID Pods.
+* Workflow control: GitHub projects inside repo, issues and branches usage in general.
 
 [role="arc42help"]
 ****
