--- a/src/docs/09_design_decisions.adoc
+++ b/src/docs/09_design_decisions.adoc
@@ -1,39 +1,27 @@
 [[section-design-decisions]]
 == Design Decisions
 
-
-[role="arc42help"]
-****
-.Contents
-Important, expensive, large scale or risky architecture decisions including rationals.
-With "decisions" we mean selecting one alternative based on given criteria.
-
-Please use your judgement to decide whether an architectural decision should be documented
-here in this central section or whether you better document it locally
-(e.g. within the white box template of one building block).
-
-Avoid redundancy. Refer to section 4, where you already captured the most important decisions of your architecture.
-
-.Motivation
-Stakeholders of your system should be able to comprehend and retrace your decisions.
-
-.Form
-Various options:
-
-* List or table, ordered by importance and consequences or:
-* more detailed in form of separate sections per decision
-* ADR (architecture decision record) for every important decision
-****
-
 === _Use of React Native_
 
 .Pros
 
 * Will allow creating apps for Android and iOS with the same code than the web application.
+* Dynamic HTML pages can be easily created.
 
 .Cons
 
 * Will take time to learn the language.
+
+
+=== _KML Format for Routes_
+
+.Pros
+
+* The use of a standard makes it easy for the application to communicate with other services.
+
+.Cons
+
+* The XML notation may result in more cumbersome processing than with JSON.
 
 === _Other Decisions_
 This part will be done in the future. Some decisions haven't been taken yet, for example:
