--- a/src/docs/10_quality_scenarios.adoc
+++ b/src/docs/10_quality_scenarios.adoc
@@ -11,7 +11,7 @@ In this section we expand and go into more detail in our quality goals, already 
 Here our quality tree is represented, showing the most important quality goals beside their requirements.
 Their are prioritized from I to III, being I the highest and III the lowest. 
 
-image::images/10_qualityTree.png[QualityTree]
+image::10_qualityTree.png[QualityTree]
 ****
 
 === Quality Scenarios
